--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -9,28 +9,25 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Content Include="Files\Day3.csv">
+        <None Include="Files\Day3.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <Content Include="Files\Day3_ex.csv">
+        </None>
+        <None Include="Files\Day3_ex.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <None Remove="Files\Day1.csv"/>
-        <Content Include="Files\Day1.csv">
+        </None>
+        <None Include="Files\Day4.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Include="Files\Day4_ex.txt">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Remove="Files\Day1.csv" />
+        <None Remove="Files\Day1_small.csv" />
+        <None Include="Files\Day1_ex.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <None Remove="Files\Day1_small.csv"/>
-        <Content Include="Files\Day1_ex.csv">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <None Remove="Files\Day2.csv"/>
-        <Content Include="Files\Day2.csv">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
-        <None Remove="Files\Day2_ex.csv"/>
-        <Content Include="Files\Day2_ex.csv">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
+        </None>
+        <None Remove="Files\Day2.csv" />
+        <None Remove="Files\Day2_ex.csv" />
     </ItemGroup>
 
 </Project>
